0.13.2.AP (PRE-RELEASE):
-----------------------
- Adds `RansomDrives` Feature
  * Some types of firmware, notably on HP Notebooks, may lock some partitions
    - This renders them inaccessible or may even lead to RefindPlus hanging
  * Such partitions can be unlocked by setting a new `ransom_drives` configuration token
  * This option currently always disabled on Apple firmware
- Adds `DxeDriverRescan` Feature
  * Controls scanning for newly revealed DXE drivers when connecting handles
    - Switch on or off with a new `dxe_driver_rescan` configuration token
  * This was previously done by default but may negatively impact loading speed
  * Should only be activated when specifically required
    - Should not be required on most firmware
  * This option currently always disabled on Apple firmware
- Adds `HaltSeconds` Function
  * As `PauseSeconds` but does not terminate on keypress
- Improves `TransientBoot` Feature
  * Now removes pre-existing `PreviousBoot` instances
- Improves `DirectBoot` Feature
  * Minimises screen shudder when `ESC` key is held down to override DirectBoot
- Improves `ScreenShot` Feature
  * Properly limited to one (1) sreenshot per keypress
    - Removes limitation of key press not continuing beyond the on-screen message display
  * Fixes Screenshots being only functional for the main screen
    - This bug was introduced in v0.13.2.AN (Commit 99da7ce)
- Improves `ProtectNVRAM` Feature
  * Now clears existing instances of blocked variables
  * Adds `UnlockID` and `UnlockIDCopy` to filtered items
    - These are not certificates but work in concert with the certificates
    - Not required once certificates are filtered and additionally, filtering these reduces NVRAM writes
- Improves Identification of Linux Instances
  * `vmlinuz`, `bzImage`, and `kernel` loaders are now accounted for as Linux loaders
  * Hence the `ProtectNVRAM` feature is not applied to such loaders
  * The `grub` loader was already accounted for
- Improves OS Boot Filtering